--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,8 +1,8 @@
 .container {
     width: 400px;
-    background-color: pink;
+    background-color: white;
     text-align: center;
     margin: 20px auto 20px auto;
-    padding: 40px;
-    border: 5px solid deepskyblue;
+    padding: 20px;
+    border: 5px solid black;
 }
