--- a/src/components/Link.module.css
+++ b/src/components/Link.module.css
@@ -10,6 +10,7 @@
 }
 
 .button:disabled {
+    color: orangered;
     display: inline-block;
     border: 3px solid black;
     outline: 0;
@@ -17,5 +18,4 @@
     vertical-align: middle;
     margin-left: 5px;
     font-size: 18px;
-    text-decoration: underline;
 }
